# TFMessenger

./: .gitignore  CMakeLists.txt
cmake-modules/: FindAPR.cmake  apr-config.cmake
cmake-modules/Linux/: FindAPR.cmake
cmake-modules/Windows/: apr-config.cmake
exec/: ClientTestUnit.cpp  HostUnit.cpp
src/Logging/: Logger.h
src/Memory/: MemoryPoolManager.h
src/Sockets/: ClientSocket.h  ServerSocket.h
src/Threads/: AsyncTask.h  Thread.h
